// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Typography (text) Alignments 1`] = `
Array [
  <p
    className="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft"
  >
    left: 
    Left alignment
  </p>,
  <p
    className="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
  >
    center: 
    Center alignment
  </p>,
  <p
    className="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight"
  >
    right: 
    Right alignment
  </p>,
]
`;

exports[`Storyshots Components/Typography (text) AppBar title 1`] = `
<h1
  className="MuiTypography-root MuiTypography-h6"
>
  Typography example for AppBar contents
</h1>
`;

exports[`Storyshots Components/Typography (text) Body 2 1`] = `
<p
  className="MuiTypography-root MuiTypography-body2"
>
  Typography example for body2 variant
</p>
`;

exports[`Storyshots Components/Typography (text) Body1 example 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1"
>
  Typography example for body1 variant
</p>
`;

exports[`Storyshots Components/Typography (text) Caption 1`] = `
<span
  className="MuiTypography-root MuiTypography-caption"
>
  Typography example for caption variant
</span>
`;

exports[`Storyshots Components/Typography (text) Heading 1 (h1) example 1`] = `
<h1
  className="MuiTypography-root MuiTypography-h1"
>
  Typography example
</h1>
`;

exports[`Storyshots Components/Typography (text) Heading 2 (h2) example 1`] = `
<h2
  className="MuiTypography-root MuiTypography-h2"
>
  Typography example for heading level 2 (h2)
</h2>
`;

exports[`Storyshots Components/Typography (text) Heading 3 (h3) example 1`] = `
<h3
  className="MuiTypography-root MuiTypography-h3"
>
  Typography example for heading level 3 (h3)
</h3>
`;

exports[`Storyshots Components/Typography (text) Playground 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1"
>
  Text
</p>
`;

exports[`Storyshots Components/Typography (text) Variants 1`] = `
<div
  className="MuiContainer-root MuiContainer-maxWidthLg"
>
  <h1
    className="MuiTypography-root MuiTypography-h1 MuiTypography-displayBlock"
  >
    h1
     
    96
  </h1>
  <h2
    className="MuiTypography-root MuiTypography-h2 MuiTypography-displayBlock"
  >
    h2
     
    60
  </h2>
  <h3
    className="MuiTypography-root MuiTypography-h3 MuiTypography-displayBlock"
  >
    h3
     
    48
  </h3>
  <h4
    className="MuiTypography-root MuiTypography-h4 MuiTypography-displayBlock"
  >
    h4
     
    34
  </h4>
  <h5
    className="MuiTypography-root MuiTypography-h5 MuiTypography-displayBlock"
  >
    h5
     
    24
  </h5>
  <h6
    className="MuiTypography-root MuiTypography-h6 MuiTypography-displayBlock"
  >
    h6
     
    20
  </h6>
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-displayBlock"
  >
    subtitle1
     
    16
  </h6>
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-displayBlock"
  >
    subtitle2
     
    14
  </h6>
  <p
    className="MuiTypography-root MuiTypography-body1 MuiTypography-displayBlock"
  >
    body1
     
    16
  </p>
  <p
    className="MuiTypography-root MuiTypography-body2 MuiTypography-displayBlock"
  >
    body2
     
    14
  </p>
  <span
    className="MuiTypography-root MuiTypography-button MuiTypography-displayBlock"
  >
    button
     
    14
  </span>
  <span
    className="MuiTypography-root MuiTypography-caption MuiTypography-displayBlock"
  >
    caption
     
    12
  </span>
  <span
    className="MuiTypography-root MuiTypography-overline MuiTypography-displayBlock"
  >
    overline
     
    12
  </span>
  <span
    className="MuiTypography-root MuiTypography-displayBlock"
  >
    inherit
     
  </span>
  <span
    className="MuiTypography-root MuiTypography-srOnly MuiTypography-displayBlock"
  >
    srOnly
     
  </span>
</div>
`;
